@@ -11,9 +11,7 @@
 void
 testTortureExecute (void)
 {
-// TODO: Enable when these ports better support long long!
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_stm8) && !defined(__SDCC_gbz80)
-#if 0 // Fails on 32-bit hosts
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_ds400) && !defined(__SDCC_gbz80)
   unsigned long long xx;
   unsigned long long *x = (unsigned long long *) &xx;
 
@@ -22,7 +20,6 @@ testTortureExecute (void)
   if (*x != 9)
     ASSERT (0);
   return;
-#endif
 #endif
 }
 
